# crypto-market-agents

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  tests.yml
docs/: ARCHITECTURE.md
scripts/: test_cli_mock.py  test_coingecko_client.py  test_dashboard_mock.py  test_final_synthesis_agent.py  test_full_pipeline_mock.py  test_news_sentiment_agent.py  test_onchain_fundamental_agent.py  test_orchestrator_mock.py  test_price_market_agent.py  test_scheduler_mock.py  test_volatility_risk_agent.py  test_whatsapp_notification.py
src/crypto_market_agents/: __init__.py  cli.py  config.py  dashboard.py  http_utils.py  logging_utils.py  mock_data.py  orchestrator.py  schemas.py  security.py
src/crypto_market_agents/agents/: __init__.py  final_synthesis_agent.py  news_sentiment_agent.py  onchain_fundamental_agent.py  price_market_agent.py  volatility_risk_agent.py
src/crypto_market_agents/clients/: __init__.py  coingecko_client.py  defillama_client.py  news_client.py
src/crypto_market_agents/notifications/: __init__.py  whatsapp_client.py  whatsapp_notifier.py
tests/: test_cli.py  test_coingecko_client.py  test_config.py  test_dashboard.py  test_defillama_client.py  test_final_synthesis_agent.py  test_full_analysis_flow.py  test_http_utils.py  test_logging_utils.py  test_news_client.py  test_news_sentiment_agent.py  test_onchain_fundamental_agent.py  test_orchestrator.py  test_price_market_agent.py  test_report_renderer.py  test_schemas.py  test_security.py  test_volatility_risk_agent.py  test_whatsapp_client.py  test_whatsapp_notifier.py
(+2 files in other folders)
