[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-market-agents"
version = "0.1.0"
description = "Application multi-agents d'analyse du marche crypto, sans trading automatique."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Crypto Market Agents" }
]
dependencies = []

[project.scripts]
crypto-market-agents = "crypto_market_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
