[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-market-agents"
version = "0.1.0"
description = "Application multi-agents d'analyse du marche crypto, sans trading automatique."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Crypto Market Agents" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage>=7.6",
  "ruff>=0.8",
]

[project.scripts]
crypto-market-agents = "crypto_market_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "reports",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["crypto_market_agents"]
omit = [
  "scripts/*",
  "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  'if __name__ == "__main__":',
  'raise SystemExit\(main\(\)\)',
]
